New Branch with changes

--- a/IdentityManager/Views/Account/Register.cshtml
+++ b/IdentityManager/Views/Account/Register.cshtml
@@ -38,6 +38,16 @@
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
     </div>
+    @*<br />
+    <div class="form-group">
+        <label asp-for="RoleSelected" class="col-md-2"></label>
+        <div class="col-md-10">
+            <select asp-for="RoleSelected" asp-items="@Model.RoleList" class="form-control">
+                <option disabled selected>--Select Role--</option>
+            </select>
+            <span asp-validation-for="RoleSelected" class="text-danger"></span>
+        </div>
+    </div>*@
     <br />
     <div class="form-group">
         <div class="col-md-2">
